# Qt_demo

01_QMainWindow/: CMakeLists.txt  README.md  mainwindow.cpp
01_SmallWidget/: CMakeLists.txt  smallwidget.cpp  smallwidget.h  smallwidget.ui  widget.cpp  widget.ui
02_Event/: CMakeLists.txt  mylable.cpp  mylable.h  widget.cpp  widget.h  widget.ui
02_SignalAndSlot/: CMakeLists.txt  student.cpp  student.h  teacher.h  widget.cpp  widget.h
02_Source/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  res.qrc
03_Control_TableWidget/: CMakeLists.txt  widget.cpp  widget.ui
03_QPainter/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
04_Filter/: CMakeLists.txt  widget.cpp  widget.ui
04_Other_Control/: CMakeLists.txt  widget.ui
05_MySelfQQ/: CMakeLists.txt  dialoglist.cpp  dialoglist.h  dialoglist.ui  main.cpp  widget.cpp  widget.h  widget.ui
06_UdpDemo/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui  widget2.cpp  widget2.h  widget2.ui
Qt-20220727/: CMakeLists.txt  main.cpp  mybotton.cpp  mybotton.h  widget.cpp  widget.h
